# rocket_exercise

./: Cargo.toml  Rocket.toml
src/: main.rs
src/services/: exercise.rs  maze_builder.rs  mod.rs  stream_works.rs  utils.rs  ws_works.rs
